--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "dev": "concurrently --kill-others \"yarn serve\" \"next\""
   },
   "dependencies": {
+    "autoprefixer": "^10.0.2",
     "classnames": "^2.2.6",
     "next": "^10.0.1",
+    "postcss": "^8.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-reveal": "^1.2.2",
     "react-spring": "^8.0.27",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.7",
