--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
+    "stylelint-config-recommended": "^3.0.0",
     "typescript": "^4.0.5"
   }
 }
