--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "babel-plugin-styled-components": "^1.12.0",
+    "concurrently": "^6.3.0",
     "stylelint-config-recommended": "^3.0.0",
+    "ts-node": "^10.4.0",
     "typescript": "^4.0.5"
   }
 }
