--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
