--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fullhuman/postcss-purgecss": "^4.0.3",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/forms": "^0.3.4",
+    "@tailwindcss/typography": "^0.4.1",
     "@types/node": "^16.11.7",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
