--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "next": "latest",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@next/eslint-plugin-next": "^12.0.4",
     "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/forms": "^0.3.4",
     "@tailwindcss/typography": "^0.4.1",
@@ -31,6 +33,7 @@
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^8.3.11",
+    "postcss-preset-env": "^7.0.1",
     "prettier": "^2.4.1",
     "tailwindcss": "^2.2.19",
     "typescript": "^4.4.4"
