--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "-": "^0.0.1",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@hookform/resolvers": "^2.8.4",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.21.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.0.3",
